<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/menu_home" />

</menu>